// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`页面快照（批量） 实名认证 real-name-auth 渲染快照 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    color="#10B981"
    size="large"
  />
</View>
`;

exports[`页面快照（批量） 我的行程 trips 渲染快照 1`] = `
<View
  style={
    {
      "backgroundColor": "#F9FAFB",
      "flex": 1,
    }
  }
>
  <TripHeader
    activeRole="all"
    isMockMode={true}
    onBack={[Function]}
    onRoleChange={[Function]}
    requestId="test-request-id"
    roleFilters={
      [
        {
          "key": "all",
          "label": "全部",
        },
        {
          "key": "passenger",
          "label": "乘客行程",
        },
        {
          "key": "driver",
          "label": "司机行程",
        },
      ]
    }
    title="我的行程"
  />
  <TripTabBar
    activeTab="全部"
    onTabChange={[Function]}
    requestId="test-request-id"
    tabs={
      [
        "全部",
        "即将出发",
        "已完成",
        "已取消",
      ]
    }
  />
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
    showsVerticalScrollIndicator={false}
  >
    <View>
      <TripEmptyState
        onFindRide={[Function]}
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`页面快照（批量） 我的车辆 my-vehicles 渲染快照 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#e2e8f0",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 44,
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 44,
          "minWidth": 44,
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      ChevronLeft
    </View>
    <Text
      style={
        {
          "color": "#111827",
          "fontSize": 18,
          "fontWeight": "bold",
        }
      }
    >
      我的车辆
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "minHeight": 44,
          "minWidth": 44,
          "opacity": 1,
          "padding": 4,
        }
      }
    >
      Plus
    </View>
  </View>,
  <RCTScrollView
    contentContainerStyle={
      {
        "padding": 16,
      }
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
  >
    <View>
      <View
        style={
          {
            "marginTop": 10,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": 6,
            }
          }
        >
          为什么需要车辆认证？
        </Text>
        <Text
          style={
            {
              "color": "#64748b",
              "fontSize": 13,
              "lineHeight": 18,
            }
          }
        >
          通过认证的车辆将获得更高的推荐权重，同时能显著提升乘客的信任感。
        </Text>
      </View>
      <View
        style={
          {
            "height": 60,
          }
        }
      />
    </View>
  </RCTScrollView>,
]
`;

exports[`页面快照（批量） 找回密码 forget-password 渲染快照 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 48,
        "maxWidth": 450,
        "minHeight": 600,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 20,
        "width": "100%",
      }
    }
  >
    <PasswordHeader
      onBack={[Function]}
      step={1}
      subtitle="验证您的手机号码"
      title="账号安全"
    />
    <View
      style={
        {
          "flex": 1,
          "padding": 30,
        }
      }
    >
      <StepPhoneInput
        loading={false}
        onChangePhone={[Function]}
        onSubmit={[MockFunction]}
        phone=""
      />
    </View>
  </View>
</View>
`;

exports[`页面快照（批量） 找车页 find-ride 渲染快照 1`] = `
[
  <View
    style={
      {
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": "#F3F4F6",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 8,
        }
      }
    >
      <View
        accessibilityLabel="返回"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F3F4F6",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "width": 40,
          }
        }
      >
        ArrowLeft
      </View>
      <Text
        style={
          {
            "color": "#111827",
            "fontSize": 18,
            "fontWeight": "700",
          }
        }
      >
        找拼车
      </Text>
      <View
        accessibilityLabel="排序筛选"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#F3F4F6",
            "borderRadius": 20,
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "width": 40,
          }
        }
      >
        SlidersHorizontal
      </View>
    </View>
    <SearchBar
      from=""
      onFromChange={[MockFunction]}
      onSearch={[MockFunction]}
      onToChange={[MockFunction]}
      requestId="test-request-id"
      to=""
    />
    <FilterTabs
      activeFilters={
        [
          "today",
        ]
      }
      onToggle={[MockFunction]}
      requestId="test-request-id"
      tags={
        [
          {
            "label": "今天",
            "value": "today",
          },
          {
            "label": "明天",
            "value": "tomorrow",
          },
        ]
      }
    />
  </View>,
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 40,
        "paddingTop": 16,
      }
    }
    keyboardShouldPersistTaps="handled"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#94a3b8",
            "fontSize": 12,
            "marginBottom": 16,
            "marginLeft": 4,
          }
        }
      >
        共找到 0 个行程
      </Text>
      <View
        style={
          {
            "alignItems": "center",
            "marginTop": 40,
          }
        }
      >
        <Text
          style={
            {
              "color": "#94a3b8",
            }
          }
        >
          未找到匹配行程，请尝试更改搜索条件
        </Text>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`页面快照（批量） 登录页 login 渲染快照 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "paddingBottom": 0,
      "paddingTop": 0,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "left": 20,
        "position": "absolute",
        "right": 20,
        "top": 50,
        "zIndex": 99,
      }
    }
  >
    <LanguageSwitch
      compact={true}
    />
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.8)",
          "borderColor": "#e2e8f0",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#64748b",
            "fontSize": 10,
            "fontWeight": "bold",
            "marginRight": 4,
          }
        }
      >
        Mock
      </Text>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#10B981"
        style={
          [
            {
              "alignSelf": "flex-start",
            },
            {
              "transform": [
                {
                  "scaleX": 0.8,
                },
                {
                  "scaleY": 0.8,
                },
              ],
            },
          ]
        }
        thumbTintColor="#FFFFFF"
        tintColor="#94a3b8"
        value={false}
      />
    </View>
  </View>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#10B981",
              "borderBottomLeftRadius": 32,
              "borderBottomRightRadius": 32,
              "overflow": "hidden",
              "paddingBottom": 40,
              "paddingHorizontal": 24,
              "paddingTop": 60,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "rgba(255, 255, 255, 0.1)",
                "borderRadius": 60,
                "height": 120,
                "position": "absolute",
                "right": -20,
                "top": -20,
                "width": 120,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderRadius": 18,
                "height": 60,
                "justifyContent": "center",
                "marginBottom": 16,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.1,
                "shadowRadius": 8,
                "width": 60,
              }
            }
          >
            <Text
              style={
                {
                  "fontSize": 30,
                }
              }
            >
              🚗
            </Text>
          </View>
          <ActivityIndicator
            color="#FFFFFF"
            style={
              {
                "alignSelf": "flex-start",
              }
            }
          />
        </View>
        <View
          style={
            {
              "padding": 24,
            }
          }
        >
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <Label>
              手机号
            </Label>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#e2e8f0",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 52,
                  "paddingHorizontal": 16,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "borderRightColor": "#e2e8f0",
                    "borderRightWidth": 1,
                    "flexDirection": "row",
                    "height": 28,
                    "marginRight": 4,
                    "paddingRight": 8,
                  }
                }
              >
                <Text />
                <Text
                  style={
                    {
                      "color": "#64748b",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "marginLeft": 8,
                    }
                  }
                >
                  +86
                </Text>
              </View>
              <TextInput
                keyboardType="phone-pad"
                maxLength={11}
                onChangeText={[MockFunction]}
                placeholder="请输入手机号"
                placeholderTextColor="#cbd5e1"
                style={
                  {
                    "color": "#111827",
                    "flex": 1,
                    "height": 48,
                    "paddingHorizontal": 8,
                  }
                }
                value=""
              />
            </View>
          </View>
          <View
            style={
              {
                "marginBottom": 16,
              }
            }
          >
            <Label>
              密码
            </Label>
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#e2e8f0",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": 52,
                  "paddingHorizontal": 16,
                }
              }
            >
              <Text />
              <TextInput
                onChangeText={[MockFunction]}
                placeholder="请输入密码"
                placeholderTextColor="#cbd5e1"
                secureTextEntry={true}
                style={
                  {
                    "color": "#111827",
                    "flex": 1,
                    "height": 48,
                    "paddingHorizontal": 8,
                  }
                }
                value=""
              />
              <Button
                onPress={[Function]}
                size="icon"
                variant="ghost"
              >
                <Text />
              </Button>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Checkbox
                checked={false}
                onCheckedChange={[MockFunction]}
              />
              <Text
                onPress={[Function]}
                style={
                  {
                    "color": "#64748b",
                    "fontSize": 14,
                    "marginLeft": 8,
                  }
                }
              >
                记住我
              </Text>
            </View>
            <Button
              onPress={[Function]}
              size="sm"
              variant="link"
            >
              <Text
                style={
                  {
                    "color": "#10B981",
                    "fontSize": 14,
                    "fontWeight": "600",
                  }
                }
              >
                忘记密码？
              </Text>
            </Button>
          </View>
          <Button
            disabled={false}
            onPress={[MockFunction]}
            size="lg"
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#10B981",
                "borderRadius": 27,
                "height": 54,
                "justifyContent": "center",
                "shadowColor": "#10B981",
                "shadowOffset": {
                  "height": 4,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 8,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#FFFFFF",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "includeFontPadding": false,
                  "textAlignVertical": "center",
                }
              }
            >
              立即登录
            </Text>
          </Button>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginVertical": 24,
              }
            }
          >
            <Separator
              style={
                {
                  "backgroundColor": "#e2e8f0",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#94a3b8",
                  "fontSize": 12,
                  "marginHorizontal": 16,
                }
              }
            >
              其他登录方式
            </Text>
            <Separator
              style={
                {
                  "backgroundColor": "#e2e8f0",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 32,
              }
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#64748b",
                  "fontSize": 14,
                  "marginLeft": 8,
                }
              }
            >
              还没有账号？
            </Text>
            <Button
              onPress={[Function]}
              style={
                {
                  "marginLeft": 4,
                }
              }
              variant="link"
            >
              <Text
                style={
                  {
                    "color": "#10B981",
                    "fontSize": 14,
                    "fontWeight": "bold",
                  }
                }
              >
                立即注册
              </Text>
            </Button>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`页面快照（批量） 行程收据 receipt-detail 渲染快照 1`] = `
<ActivityIndicator
  color="#10B981"
  size="large"
/>
`;

exports[`页面快照（批量） 语言设置 language-settings 渲染快照 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderBottomColor": undefined,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 8,
          "width": 80,
        }
      }
    >
      <Text
        style={
          {
            "color": "#10B981",
            "fontSize": 16,
          }
        }
      >
        ← 
        返回
      </Text>
    </View>
    <Text
      style={
        {
          "color": undefined,
          "fontSize": 18,
          "fontWeight": "600",
        }
      }
    >
      语言设置
    </Text>
    <View
      style={
        {
          "width": 80,
        }
      }
    />
  </View>,
  <View
    style={
      {
        "backgroundColor": "#eff6ff",
        "borderRadius": 8,
        "marginHorizontal": 16,
        "marginTop": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <Text
      style={
        {
          "color": "#16a34a",
          "fontSize": 13,
          "lineHeight": 20,
        }
      }
    >
      Select your preferred language. Changes take effect immediately.
    </Text>
  </View>,
  <RCTScrollView
    style={
      {
        "flex": 1,
        "paddingHorizontal": 16,
        "paddingTop": 12,
      }
    }
  >
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 12,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": undefined,
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            简体中文
          </Text>
          <Text
            style={
              {
                "color": "#64748b",
                "fontSize": 14,
                "marginTop": 4,
              }
            }
          >
            简体中文
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "borderColor": "#10B981",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": undefined,
                "fontSize": 18,
                "fontWeight": "600",
              }
            }
          >
            English
          </Text>
          <Text
            style={
              {
                "color": "#64748b",
                "fontSize": 14,
                "marginTop": 4,
              }
            }
          >
            English
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#10B981",
              "borderRadius": 14,
              "height": 28,
              "justifyContent": "center",
              "width": 28,
            }
          }
        >
          <Text
            style={
              {
                "color": "#FFFFFF",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            ✓
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`页面快照（批量） 车辆认证详情 vehicle-verification 渲染快照 1`] = `
<ActivityIndicator
  color="#10B981"
/>
`;

exports[`页面快照（批量） 邀请好友 invite-friends 渲染快照 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
      },
      {
        "alignItems": "center",
        "justifyContent": "center",
      },
    ]
  }
>
  <ActivityIndicator
    color="#10B981"
    size="large"
  />
</View>
`;

exports[`页面快照（批量） 首页 home 渲染快照 1`] = `
<RCTScrollView
  bounces={false}
  contentContainerStyle={
    [
      {
        "paddingBottom": 20,
      },
      {
        "paddingTop": 0,
      },
    ]
  }
  keyboardShouldPersistTaps="handled"
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.3)",
          "borderRadius": 999,
          "flexDirection": "row",
          "paddingHorizontal": 8,
          "paddingVertical": 4,
          "position": "absolute",
          "right": 20,
          "top": 50,
          "zIndex": 999,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 10,
            "fontWeight": "600",
            "marginRight": 4,
          }
        }
      >
        Mock 模式
      </Text>
      <RCTSwitch
        accessibilityRole="switch"
        onChange={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onTintColor="#FFFFFF"
        style={
          [
            {
              "alignSelf": "flex-start",
            },
            {
              "transform": [
                {
                  "scaleX": 0.7,
                },
                {
                  "scaleY": 0.7,
                },
              ],
            },
          ]
        }
        thumbTintColor="#F3F4F6"
        tintColor="#94a3b8"
        value={false}
      />
    </View>
    <HomeHeader
      fromLocation=""
      hasUnread={false}
      onNavigateToNotifications={[Function]}
      onNavigateToProfile={[Function]}
      onSearch={[Function]}
      onSetFrom={[MockFunction]}
      onSetTo={[MockFunction]}
      requestId="test-request-id"
      selectedDate="2024-01-01"
      toLocation=""
      userInfo={
        {
          "name": "测试用户",
          "phone": "138****8000",
        }
      }
    />
    <QuickActions
      colors={
        {
          "blue": "#eff6ff",
          "green": "#f0fdf4",
          "orange": "#fff7ed",
          "purple": "#FAF5FF",
        }
      }
      onNavigate={[MockFunction]}
      requestId="test-request-id"
    />
    <StatsBanner
      stats={
        {
          "savedCarbon": 50,
          "savedMoney": 100,
          "totalRides": 10,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 16,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#f0fdf4",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingVertical": 8,
          }
        }
      >
        Shield
        <Text
          style={
            {
              "color": "#10B981",
              "fontSize": 11,
              "marginLeft": 4,
            }
          }
        >
          实名认证
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#EFF6FF",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingVertical": 8,
          }
        }
      >
        Star
        <Text
          style={
            {
              "color": "#2563EB",
              "fontSize": 11,
              "marginLeft": 4,
            }
          }
        >
          信用评分
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FAF5FF",
            "borderRadius": 12,
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingVertical": 8,
          }
        }
      >
        Zap
        <Text
          style={
            {
              "color": "#EA580C",
              "fontSize": 11,
              "marginLeft": 4,
            }
          }
        >
          快速匹配
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "paddingBottom": 30,
          "paddingHorizontal": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            {
              "color": "#111827",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          附近行程
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#10B981",
                "fontSize": 14,
              }
            }
          >
            查看全部
          </Text>
          ChevronRight
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "column",
            "gap": 12,
          }
        }
      />
    </View>
  </View>
</RCTScrollView>
`;
